--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-SQLAlchemy==3.1.1
 Flask-SocketIO==5.3.6
 python-socketio==5.10.0
 pyserial==3.5
+evdev==1.7.0
 email-validator==2.2.0
 requests==2.31.0
 beautifulsoup4==4.12.2
