--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-WTF==1.2.1
 Flask-SQLAlchemy==3.1.1
 Flask-SocketIO==5.3.6
 python-socketio==5.10.0
+eventlet==0.36.1
 pyserial==3.5
 evdev==1.7.0
 email-validator==2.2.0
