--- a/enso-kiosk.service
+++ b/enso-kiosk.service
@@ -7,7 +7,7 @@ Requires=enso-catalog.service
 Type=simple
 User=pi
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/chromium-browser --kiosk --disable-restore-session-state --disable-session-crashed-bubble --disable-infobars --disable-translate --no-first-run --disable-default-apps --disable-web-security --user-data-dir=/home/pi/enso-catalog/.config/chromium-kiosk --app=http://localhost:5000/kiosk
+ExecStart=/usr/bin/chromium-browser --kiosk --disable-restore-session-state --disable-session-crashed-bubble --disable-infobars --disable-translate --no-first-run --disable-default-apps --disable-web-security --user-data-dir=/home/pi/enso-catalog/.config/chromium-kiosk http://localhost:5000/kiosk
 Restart=always
 RestartSec=5
 
