--- a/enso-kiosk.service
+++ b/enso-kiosk.service
@@ -5,9 +5,12 @@ Requires=enso-catalog.service
 
 [Service]
 Type=simple
-User=pi
+User=enso
 Environment=DISPLAY=:0
-ExecStart=/home/pi/enso-catalog/kiosk-launcher.sh
+Environment=XAUTHORITY=/home/enso/.Xauthority
+Environment=DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
+Environment=XDG_RUNTIME_DIR=/run/user/1000
+ExecStart=/home/enso/enso-catalog/kiosk-launcher.sh
 Restart=always
 RestartSec=5
 
