--- a/enso-catalog.service
+++ b/enso-catalog.service
@@ -4,10 +4,10 @@ After=network.target
 
 [Service]
 Type=simple
-User=pi
-WorkingDirectory=/home/pi/enso-catalog
-Environment=PATH=/home/pi/enso-catalog/.venv/bin
-ExecStart=/home/pi/enso-catalog/.venv/bin/gunicorn --bind 0.0.0.0:5000 --workers 1 app:app
+User=@INSTALL_USER@
+WorkingDirectory=@INSTALL_DIR@
+Environment=PATH=@INSTALL_DIR@/.venv/bin
+ExecStart=@INSTALL_DIR@/.venv/bin/gunicorn --bind 0.0.0.0:5000 --workers 1 app:app
 Restart=always
 RestartSec=5
 
