--- a/enso-kiosk.service
+++ b/enso-kiosk.service
@@ -8,8 +8,7 @@ Type=simple
 # Run as root and use wrapper to determine session user at runtime
 # (wrapper will sudo to the detected user)
 ExecStart=@INSTALL_DIR@/kiosk-start.sh
-Restart=always
-RestartSec=5
+Restart=no
 
 [Install]
 WantedBy=graphical.target
